--- a/index.html
+++ b/index.html
@@ -33,15 +33,7 @@
           </svg>
         </div>
 
-        <div class="nav-groups">
-          <button class="nav-btn active" type="button" aria-label="Профиль">⌂</button>
-          <button class="nav-btn" type="button" aria-label="Магазин">◫</button>
-          <button class="nav-btn" type="button" aria-label="Таблицы">☰</button>
-          <button class="nav-btn" type="button" aria-label="Игроки">◉</button>
-          <button class="nav-btn" type="button" aria-label="Карта">⌖</button>
-          <button class="nav-btn" type="button" aria-label="Аналитика">▥</button>
-        </div>
-
+       
         <div class="side-bottom">
           <button class="nav-btn" type="button" aria-label="Уведомления">◌</button>
           <button class="nav-btn" type="button" aria-label="Настройки">⚙</button>
@@ -49,7 +41,7 @@
       </aside>
 
       <main class="content">
-        <header class="crumbs">Статистика <span>›</span> <strong>Wind Economy</strong></header>
+        <header class="crumbs"<span>›</span> <strong>Wind Economy</strong></header>
 
         <section class="profile-grid">
          
@@ -174,4 +166,5 @@
     </div>
   </body>
 </html>
+
 
