Update text and links in dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -87,18 +87,18 @@
           <article class="panel wallet-panel">
             <div class="bank-card">
               <div class="bank-top">
-                <span class="chip">ВИ-00114</span>
+                <span class="chip">навайбкожено с любовью</span>
                 <strong>В-Банк</strong>
               </div>
               <div class="bank-bottom">
-                <span>WIND ECONOMY</span>
+                <span>WIND ECONOMY - средние цены:</span>
                 <strong id="avgPrice">...</strong>
               </div>
             </div>
 
             <div class="wallet-actions">
               <a class="primary-btn" href="./prices.html">Перейти в цены</a>
-              <a class="secondary-btn" href="./codex.html">Редактировать кодекс</a>
+              <a class="secondary-btn" href="./codex.html">кодекс</a>
               <button type="button" class="secondary-btn quick-btn" data-link="./codex.html">Штрафы</button>
             </div>
           </article>
@@ -161,3 +161,4 @@
     </div>
   </body>
 </html>
+
