--- a/dashboard.html
+++ b/dashboard.html
@@ -25,8 +25,6 @@
         </a>
 
         <nav class="nav-main" aria-label="Основная навигация">
-          
-
           <a class="icon-link active" href="./dashboard.html" title="Dashboard" aria-label="Dashboard">
             <svg viewBox="0 0 24 24" aria-hidden="true">
               <rect x="3" y="4" width="18" height="16" rx="2" />
@@ -54,27 +52,6 @@
               <path d="M22 18V10" />
             </svg>
           </a>
-          <a class="icon-link" href="./codex.html" title="Правила" aria-label="Правила">
-            <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M6 3h12v18H6z" />
-              <path d="M9 8h6M9 12h6M9 16h4" />
-            </svg>
-          </a>
-        </nav>
-
-        <nav class="nav-bottom" aria-label="Системные ссылки">
-          <a class="icon-link" href="./prices.html" title="Уведомления" aria-label="Уведомления">
-            <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M6 8a6 6 0 0 1 12 0v5l2 2v1H4v-1l2-2z" />
-              <path d="M10 19a2 2 0 0 0 4 0" />
-            </svg>
-          </a>
-          <a class="icon-link" href="./codex.html" title="Настройки" aria-label="Настройки">
-            <svg viewBox="0 0 24 24" aria-hidden="true">
-              <circle cx="12" cy="12" r="3" />
-              <path d="M19 12a7 7 0 0 0-.1-1l2-1.5-2-3.5-2.3.8a7 7 0 0 0-1.7-1L14.5 3h-5L9 5.8a7 7 0 0 0-1.7 1L5 6l-2 3.5L5 11a7 7 0 0 0 0 2l-2 1.5L5 18l2.3-.8a7 7 0 0 0 1.7 1l.5 2.8h5l.5-2.8a7 7 0 0 0 1.7-1L19 18l2-3.5-2-1.5c.1-.3.1-.7.1-1z" />
-            </svg>
-          </a>
         </nav>
       </aside>
 
@@ -83,18 +60,18 @@
           <article class="panel wallet-panel">
             <div class="bank-card">
               <div class="bank-top">
-                <span class="chip">навайбкожено с любовью</span>
+                <span class="chip">ВИ-00114</span>
                 <strong>В-Банк</strong>
               </div>
               <div class="bank-bottom">
-                <span>WIND ECONOMY - средние цены:</span>
+                <span>WIND ECONOMY</span>
                 <strong id="avgPrice">...</strong>
               </div>
             </div>
 
             <div class="wallet-actions">
               <a class="primary-btn" href="./prices.html">Перейти в цены</a>
-              <a class="secondary-btn" href="./codex.html">кодекс</a>
+              <a class="secondary-btn" href="./codex.html">Редактировать кодекс</a>
               <button type="button" class="secondary-btn quick-btn" data-link="./codex.html">Штрафы</button>
             </div>
           </article>
@@ -157,5 +134,3 @@
     </div>
   </body>
 </html>
-
-
