--- a/codex.html
+++ b/codex.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=Unbounded:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css?v=20260213-4" />
-    <script defer src="./app.js?v=20260213-4"></script>
+    <link rel="stylesheet" href="./styles.css?v=20260219-3" />
+    <script defer src="./app.js?v=20260219-3"></script>
   </head>
   <body>
     <div class="layout">
@@ -56,6 +56,25 @@
       </aside>
 
       <main class="content">
+        <section class="panel hero-panel hero-panel-compact">
+          <div class="hero-grid">
+            <div class="hero-copy">
+              <p class="eyebrow">ЭКОНОМИЧЕСКИЙ КОДЕКС</p>
+              <h1>
+                <span class="text-plain">Wind</span><span class="text-accent">Codex</span>
+              </h1>
+              <p class="hero-description">
+                Правила торговли, лицензии, налоги и санкции. Базовый регламент для стабильной
+                экономики сервера.
+              </p>
+              <div class="hero-actions">
+                <a class="primary-btn" href="./prices.html">К ценам</a>
+                <a class="secondary-btn" href="./dashboard.html">Дашборд</a>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <section class="panel codex-main">
           <div class="panel-head">
             <h1>Экономический кодекс WIND</h1>
