--- a/dashboard.html
+++ b/dashboard.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=Unbounded:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css?v=20260213-4" />
-    <script defer src="./app.js?v=20260213-4"></script>
+    <link rel="stylesheet" href="./styles.css?v=20260219-3" />
+    <script defer src="./app.js?v=20260219-3"></script>
   </head>
   <body>
     <div class="layout">
@@ -56,6 +56,25 @@
       </aside>
 
       <main class="content">
+        <section class="panel hero-panel">
+          <div class="hero-grid">
+            <div class="hero-copy">
+              <p class="eyebrow">WIND ECONOMY</p>
+              <h1>
+                <span class="text-plain">Wind</span><span class="text-accent">Economy</span>
+              </h1>
+              <p class="hero-description">
+                Платформа цен и экономических правил сервера. Отслеживай рынок, анти-демпинг и
+                ключевые показатели в одном месте.
+              </p>
+              <div class="hero-actions">
+                <a class="primary-btn" href="./prices.html">Открыть рынок</a>
+                <a class="secondary-btn" href="./codex.html">Узнать правила</a>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <section class="dashboard-grid">
           <article class="panel wallet-panel">
             <div class="bank-card">
